--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -33,6 +33,7 @@
     "@vitejs/plugin-vue": "^4.4.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.51.0",
+    "eslint-plugin-vue": "^8.5.0",
     "eslint-config-custom": "workspace:*",
     "icons": "workspace:*",
     "postcss": "^8.4.31",
