--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -32,6 +32,7 @@
     "bingmaps": "^2.0.3",
     "csstype": "^3.1.2",
     "eslint": "^8.51.0",
+    "eslint-plugin-vue": "^8.5.0",
     "eslint-config-custom": "workspace:*",
     "eslint-plugin-storybook": "^0.6.15",
     "react": "^18.2.0",
